Pago de la venta usando el token
